Fix T89736: Cycles error with persistent data, displacement and motion blur