intern/cycles/blender/blender_object.cpp
@@ -109,22 +109,22 @@ void BlenderSync::sync_object_motion_init(BL::Object &b_parent, BL::Object &b_ob
   }
 
   Geometry *geom = object->get_geometry();
-  geom->set_use_motion_blur(false);
-  geom->set_motion_steps(0);
 
-  uint motion_steps;
+  int motion_steps = 0;
+  bool use_motion_blur = false;
 
   if (need_motion == Scene::MOTION_BLUR) {
     motion_steps = object_motion_steps(b_parent, b_ob, Object::MAX_MOTION_STEPS);
-    geom->set_motion_steps(motion_steps);
     if (motion_steps && object_use_deform_motion(b_parent, b_ob)) {
-      geom->set_use_motion_blur(true);
+      use_motion_blur = true;
     }
   }
   else {
     motion_steps = 3;
-    geom->set_motion_steps(motion_steps);
   }
+
+  geom->set_use_motion_blur(use_motion_blur);
+  geom->set_motion_steps(motion_steps);
 
   motion.resize(motion_steps, transform_empty());
 
